[package]
name = "loxers"
version = "0.1.0"
authors = ["Karim SENHAJI <karim.senhaji@amadeus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ="1.0"
thiserror="1.0"
phf = { version = "0.8.0", features = ["macros"] }
rustyline = "6.1.1"